@@ -1,6 +1,8 @@
 1.9.14 - 2019-XX-XX
 
-  1. Implement Hadoop FileSystem `concat` method using GCS compose API.
+  1. Implement Hadoop File System `concat` method using GCS compose API.
+
+  2. Add Hadoop File System extended attributes support.
 
 
 1.9.13 - 2019-02-04
